# timeseries-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
norway_30GW/: ninja_download_nve2023_series.py  ninja_download_smola.py  norway_30GW_2023areas.ipynb  oceangrid_offshorewind_new.csv
recom_maps/: ninja_download_northsea_offshorewindy.py  recom_maps_northsea_offshorewind.ipynb  windfarms_scenario.csv
